--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="fondo">
+<body class="body-bg">
       <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="auto-de-mar">
+          <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,10 +24,10 @@
                 <a class="nav-link" href="#">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Acceder</a>
+                <a class="nav-link" href="./indexLogin.html">Acceder</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Registrar</a>
+                <a class="nav-link" href="./indexRegistro.html">Regístrate</a>
               </li>
               
             </ul>
