--- a/indexRegistro.html
+++ b/indexRegistro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
@@ -20,27 +21,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="./indexProductos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./indexLogin.html">Acceder</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Regístrate</a>
+                    <a class="nav-link active" href="./indexRegistro.html">Regístrate</a>
                 </li>
-
             </ul>
         </div>
     </div>
 </nav>
 
+<!--Subtítulo-->
+<h3 class="text-center mt-3 text-white">¡Regístrate gratis en Autos del Mar!</h3>
+
 <body class="body-bg">
-    <div class="row registro mx-auto mt-5 center">
+    <div class="row registro mx-auto mt-3 center">
         <form>
-            <h4 class="text-center mt-3">¡Regístrate gratis en Autos del Mar!</h4>
             <div class="mt-3 mb-3">
                 <label for="nombre" class="form-label">Nombre: </label>
                 <input type="text" class="form-control" id="nombre" aria-describedby="nombre">
@@ -62,9 +64,55 @@
                 <label class="form-check-label" for="exampleCheck1">Acepto los <a href="#">Términos y
                         condiciones</a></label>
             </div>
-            <button type="submit" class="btn btn-light">Registrarse</button>
+            <a href="./index.html" class="btn btn-light">Registrarse</a>
         </form>
     </div>
+
+    <!--Pie de página-->
+    <footer class="bg-body-primary text-white text-center text-lg-start mt-5"
+        style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0 text-center">
+                    <h5 class="text">SOBRE NOSOTROS</h5>
+                    <p class="mt-3">
+                        Descubre el vehículo de tus sueños aquí en Autos del Mar. Contamos con una ámplia selección de
+                        autos nuevos
+                        y usados, atención
+                        personalizada y financiamiento disponible. Contamos con más de 30 años de experiencia
+                        especializándonos en la
+                        venta de vehículos.
+                        ¡Encuentra el auto perfecto para ti con nosotros!.
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0 ms-auto text-center">
+                    <h5 class="text">CONTÁCTANOS:</h5>
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a class="text-white" href="#">
+                                <i class="bi bi-facebook" style="font-size: 23px;"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="text-white" href="#">
+                                <i class="bi bi-instagram" style="font-size: 23px;"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <i class="bi bi-telephone-fill" style="font-size: 21px;"> + 56 9 1122 3344</i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!--Parte inferior footer-->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2024
+            <a class="text-white" href="./index.html">Autos del Mar</a>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
