--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/img/nissan-gta-r35.jpeg" class="tamano" alt="nissan gtr r35">
+        <a href="#">
+          <img src="./assets/img/nissan-gta-r35.jpeg" class="tamano" alt="nissan gtr r35">
+        </a>
         <div class="carousel-caption d-flex row">
           <h5>Nissan GTR R35</h5>
           <p>El deportivo japonés fue uno de los centros de atención del Tokyo Motor Show y no es para menos dado el
@@ -62,7 +64,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/jaguar-f-type.jpg" class="tamano" alt="Jaguar F-Type">
+        <a href="./indexJaguar.html">
+          <img src="./assets/img/jaguar-f-type.jpg" class="tamano" alt="Jaguar F-Type">
+        </a>
         <div class="carousel-caption d-flex row">
           <h5>Jaguar F-Type</h5>
           <p>El diseño del F-TYPE es inconfundiblemente Jaguar: atlético, estilizado y elegante en todos sus ángulos.
