--- a/indexJaguar.html
+++ b/indexJaguar.html
@@ -59,23 +59,24 @@
         </div>
 
 
-        <div class="card mb-3 body-bg text-white mt-2" style="width: 100%; height: 100% bordes">
+        <div class="card mb-3 body-bg bordes" style="width: 95%; height: 95%">
             <div class="row g-0 justify-content-between d-flex">
               <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                <h1 class="card-title">Jagura F-Type</h1>
-                <h4 class="card-title">Descripcion:</h4>
-                <p class="card-text">Esta pintura representa los años pasados del artista que la creó, en los cuales sufrió
+                <h1 class="card-title text-primary">Jagura F-Type</h1>
+                <hr class="text-white">
+                <h4 class="card-title text-white">Descripcion:</h4>
+                <p class="card-text text-white">Esta pintura representa los años pasados del artista que la creó, en los cuales sufrió
                     de una profunda depresión y brotes psicóticos.</p>
               </div>
               <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                <div class="card-body">
+                <div class="card-body text-white">
                   <h5>Modelo: F-Type Coupé 5.0 V8 75 Aut. 450 - 3-puertas</h5>
                   <hr>
                   <h4 class="card-title">Modelo</h4>
                   <P class="card-text">Esta obra cuenta con pintura al óleo, la cual refleja perfectamente el realismo que
                     desea transmitir el autor.</P>
                   <hr>
-                  <h4 class="card-text"><small class="text-white">El valor de esta obra es de: 350.000</small></h4>
+                  <h4 class="card-text"><small class="text-white">Precio: 60.000.000</small></h4>
                 </div>
               </div>
             </div>
