--- a/indexProductos.html
+++ b/indexProductos.html
@@ -61,7 +61,7 @@
             </select>
 
         </div>
-        <div class="row">
+        <div class="row mx-2">
             <div class="text-center col-xs-12 col-sm-12 col-md-4 col-lg-4 mx-auto">
                 <div class="card d-flex text-center justify-content-between mx-auto mt-1 bg-black" style="width: 15rem;">
                     <img src="./assets/img/jaguar-f-type.jpg" class="card-img-top" alt="Jaguar F-Type">
