--- a/indexNissan350z.html
+++ b/indexNissan350z.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jaguar F-Type - Autos del Mar</title>
+  <title>Nissan 350z - Autos del Mar</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -43,7 +43,7 @@
     <div id="carouselExample" class="carousel slide mx-5">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/img/jaguar-f-type.jpg" class="tamano2" alt="jaguar 1">
+          <img src="./assets/img/jaguar-f-type.jpg" class="tamano2" alt="350z 1">
         </div>
         <div class="carousel-item">
           <img src="./assets/img/Jaguar/jaguar-f-type-2022.jpg" class="tamano2" alt="jaguar 2">
@@ -66,27 +66,25 @@
     <div class="card body-bg bordes mt-4 mx-5">
       <div class="row g-0 justify-content-between" style="background-color: rgba(0, 0, 0, 0.5);">
         <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
-          <h2 class="card-title text-white text-center mt-2">Jaguar F-Type</h2>
+          <h2 class="card-title text-white text-center mt-2">Nissan 350z</h2>
           <hr>
           <h4 class="card-title text-white text-uppercase text-center">Descripción:</h4>
-          <p class="card-text text-center text-white fs-5">El Jaguar F-Type es un deportivo de alta gama que combina
-            diseño elegante con potencia impresionante, ofreciendo una experiencia de conducción emocionante y lujosa.
-          </p>
+          <p class="card-text text-center text-white fs-5">El 350Z, con el elegante diseño nuevo basado en la ADN del
+            240Z, ayudó a rejuvenecer la presencia de Nissan en el mercado durante la segunda mitad de la década.</p>
           <hr>
-          <h4 class="card-title text-white text-center">MODELO: F-Type Coupé 5.0 V8 75 Aut. 450 - 3-puertas</h4>
+          <h4 class="card-title text-white text-center">MODELO: Coupé - 3-puertas</h4>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
           <div class="card-body text-white">
-            <h4 class="text-center text-uppercase">Año: 2022</h4>
+            <h4 class="text-center text-uppercase">Año: 2004</h4>
             <hr class="text-dark">
             <h4 class="card-title text-uppercase text-center">Otras versiones:</h4>
-            <p class="card-text text-white fs-6 text-center">- F-Type Coupé 5.0 V8 R75 AWD Aut. 575 - 3-puertas -
-              2022<br>
-              - F-Type Coupé 5.0 V8 R-Dynamic Black Aut. 450 - 3-puertas - 2021<br>
-              - F-Type Coupé 2.0 I4R-Dynamic Black Aut. 300 - 3-puertas - 2021<br>
+            <p class="card-text text-white fs-6 text-center">- Convertible - 3-puertas - 2003/2006<br>
+              - Nismo R-Tune - 3-puertas - 2003<br>
+              - Coupé 35th Anniversary - 3-puertas - 2005<br>
             </p>
             <hr class="text-dark">
-            <h3 class="card-text text-center"><small class="text-white">PRECIO: $69,500,000</small></h3>
+            <h3 class="card-text text-center"><small class="text-white">PRECIO: $15,500,000</small></h3>
           </div>
         </div>
       </div>
