--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Autos del Mar</title>
+  <title>Autos del Mar</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -53,7 +53,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href="#">
+        <a href="./indexNissanGTR.html">
           <img src="./assets/img/nissan-gta-r35.jpeg" class="tamano" alt="nissan gtr r35">
         </a>
         <div class="carousel-caption d-flex row">
@@ -73,7 +73,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/koenigsegg.jpg" class="tamano" alt="Koenigsegg agera R">
+        <a href="./indexProductos.html">
+          <img src="./assets/img/koenigsegg.jpg" class="tamano" alt="Koenigsegg agera R">
+        </a>
         <div class="carousel-caption d-flex row">
           <h5>Koenigsegg Agera R</h5>
           <p>El Koenigsegg Agera es un superdeportivo biplaza sueco capaz de alcanzar en su versión más potente 1.155
