--- a/indexJaguar.html
+++ b/indexJaguar.html
@@ -90,6 +90,11 @@
           </div>
         </div>
       </div>
+      <div class="d-flex justify-content-center align-item-center mx-2 mt-4 mb-4">
+        <a href="./index.html">
+          <button class="btn btn-light">Comprar vehículo</button>
+        </a>
+      </div>
     </div>
 
     <!--Pie de página-->
