--- a/indexNissan350z.html
+++ b/indexNissan350z.html
@@ -43,13 +43,13 @@
     <div id="carouselExample" class="carousel slide mx-5">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/img/jaguar-f-type.jpg" class="tamano2" alt="350z 1">
+          <img src="./assets/img/Nissan-350Z .jpg" class="tamano2" alt="350z 1">
         </div>
         <div class="carousel-item">
-          <img src="./assets/img/Jaguar/jaguar-f-type-2022.jpg" class="tamano2" alt="jaguar 2">
+          <img src="./assets/img/nissan 350z/Nissan 350Z.webp" class="tamano2" alt="350z 2">
         </div>
         <div class="carousel-item">
-          <img src="./assets/img/Jaguar/jaguar-f-type-2020-1219-011.jpg" class="tamano2" alt="jaguar 3">
+          <img src="./assets/img/nissan 350z/350z-tokyo-drift-portada-720x334.webp" class="tamano2" alt="350z 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -87,6 +87,11 @@
             <h3 class="card-text text-center"><small class="text-white">PRECIO: $15,500,000</small></h3>
           </div>
         </div>
+      </div>
+      <div class="d-flex justify-content-center align-item-center mx-2 mt-4 mb-4">
+        <a href="./index.html">
+          <button class="btn btn-light">Comprar vehículo</button>
+        </a>
       </div>
     </div>
 
