--- a/indexNissanGTR.html
+++ b/indexNissanGTR.html
@@ -46,10 +46,10 @@
           <img src="./assets/img/nissan-gta-r35.jpeg" class="tamano2" alt="gtr 1">
         </div>
         <div class="carousel-item">
-          <img src="./assets/img/Jaguar/jaguar-f-type-2022.jpg" class="tamano2" alt="jaguar 2">
+          <img src="./assets/img/nissan gtr/2022-Nissan-GT-R-JDM-6.jpg" class="tamano2" alt="gtr 2">
         </div>
         <div class="carousel-item">
-          <img src="./assets/img/Jaguar/jaguar-f-type-2020-1219-011.jpg" class="tamano2" alt="jaguar 3">
+          <img src="./assets/img/nissan gtr/Nissan-GT-R-R35-facelift-2023.jpg" class="tamano2" alt="gtr 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -73,21 +73,26 @@
             potencia y diseño aerodinámico. Es un ícono del mundo del automovilismo, reconocido por su rendimiento
             excepcional y su estatus de culto entre los aficionados a los autos deportivos.</p>
           <hr>
-          <h4 class="card-title text-white text-center">MODELO: F-Type Coupé 5.0 V8 75 Aut. 450 - 3-puertas</h4>
+          <h4 class="card-title text-white text-center">MODELO: GTR R35 Coupé 3.8 V6 biturbo 565cv - 3-puertas</h4>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
           <div class="card-body text-white">
             <h4 class="text-center text-uppercase">Año: 2010</h4>
             <hr class="text-dark">
             <h4 class="card-title text-uppercase text-center">Otras versiones:</h4>
-            <p class="card-text text-white fs-6 text-center">- F-Type Coupé 5.0 V8 R75 AWD Aut. 575 - 3-puertas - 2022<br>
-              - F-Type Coupé 5.0 V8 R-Dynamic Black Aut. 450 - 3-puertas - 2021<br>
-              - F-Type Coupé 2.0 I4R-Dynamic Black Aut. 300 - 3-puertas - 2021<br>
+            <p class="card-text text-white fs-6 text-center">- Premium traccion total<br>
+              - T-spec® Traccion total<br>
+              - nismo® Traccion total<br>
             </p>
             <hr class="text-dark">
             <h3 class="card-text text-center"><small class="text-white">PRECIO: $150,000,000</small></h3>
           </div>
         </div>
+      </div>
+      <div class="d-flex justify-content-center align-item-center mx-2 mt-4 mb-4">
+        <a href="./index.html">
+          <button class="btn btn-light">Comprar vehículo</button>
+        </a>
       </div>
     </div>
 
