--- a/indexProductos.html
+++ b/indexProductos.html
@@ -100,7 +100,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-white">McLaren 720S</h5>
                         <p class="card-text"><small>0 en Stock</small></p>
-                        <p class="card-text text-white">Año: 2020</p>
+                        <p class="card-text text-white">Año: 2022</p>
                         <p class="card-text text-white fs-5">$330,750,000</p>
                         <a href="#" class="btn btn-light disabled" aria-disabled="true">Agotado</a>
                     </div>
@@ -109,7 +109,7 @@
     
             <div class="text-center col-xs-12 col-sm-12 col-md-4 col-lg-4 mx-auto mt-4">
                 <div class="card d-flex text-center justify-content-between mx-auto mt-1 bg-black" style="width: 17rem;">
-                    <img src="./assets/img/350z.webp" class="card-img-top" alt="...">
+                    <img src="./assets/img/Nissan-350Z .jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-white">Nissan 350z</h5>
                         <p class="card-text"><small>10 en Stock</small></p>
