--- a/indexLogin.html
+++ b/indexLogin.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="body-bg">
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
@@ -39,7 +40,7 @@
     
     <!--Subtítulo-->
     <h3 class="text-center mt-3 text-white">¡Bienvenid@ a Autos del Mar!</h3>
-
+    <!--Correo y Contraseña-->
     <div class="row login mx-auto mt-3 center">
         <form>
 
