--- a/indexProductos.html
+++ b/indexProductos.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<!--Navbar-->
 <body class="body-bg">
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
@@ -42,6 +42,7 @@
 
     <!--Aqui va lo de la página-->
     <main>
+        <!--barra para filtrar productos-->
         <div class="text-center barra mb-4">
             <select name="categorias" class="btn btn-dark">
                 <option value="">Filtrar por...</option>
@@ -53,7 +54,7 @@
                 <option value="6">Precio 🔽</option>
             </select>
         </div>
-
+        <!--Tarjeta de Productos-->
         <div class="row mx-2">
             <div class="text-center col-xs-12 col-sm-12 col-md-4 col-lg-4 mx-auto">
                 <div class="card d-flex text-center justify-content-between mx-auto mt-1 bg-black" style="width: 17rem;">
