--- a/indexRegistro.html
+++ b/indexRegistro.html
@@ -11,36 +11,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-        <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./indexProductos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./indexLogin.html">Acceder</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="./indexRegistro.html">Regístrate</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<!--Subtítulo-->
-<h3 class="text-center mt-3 text-white">¡Regístrate gratis en Autos del Mar!</h3>
-
 <body class="body-bg">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./indexProductos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./indexLogin.html">Acceder</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./indexRegistro.html">Regístrate</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <!--Subtítulo-->
+    <h3 class="text-center mt-3 text-white">¡Regístrate gratis en Autos del Mar!</h3>
+    <!--Nombre, Correo y contraseña-->
     <div class="row registro mx-auto mt-3 center">
         <form>
             <div class="mt-3 mb-3">
