--- a/indexJaguar.html
+++ b/indexJaguar.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="body-bg">
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
     <div class="container-fluid">
       <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
