--- a/indexNissan350z.html
+++ b/indexNissan350z.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="body-bg">
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg bg-body-primary" data-bs-theme="dark">
     <div class="container-fluid">
       <img src="./assets/img/auto-del-mar.webp" class="navbar-brand mini" alt="autos-del-mar">
@@ -146,5 +147,4 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
